RESOLVED FIXED303515
[blocks-in-inline] lastLineWithInflowContent should only ignore lines with out-of-flow only content
https://bugs.webkit.org/show_bug.cgi?id=303515
Summary [blocks-in-inline] lastLineWithInflowContent should only ignore lines with ou...
alan
Reported 2025-12-03 19:22:11 PST
ssia
Attachments
Patch (2.81 KB, patch)
2025-12-03 19:24 PST, alan
no flags
Patch (1.46 KB, patch)
2025-12-03 19:26 PST, alan
no flags
Patch (1.46 KB, patch)
2025-12-04 10:21 PST, alan
no flags
[fast-cq]Patch (1.93 KB, patch)
2025-12-04 13:00 PST, alan
no flags
alan
Comment 1 2025-12-03 19:24:00 PST
alan
Comment 2 2025-12-03 19:26:24 PST
alan
Comment 3 2025-12-04 10:21:49 PST
alan
Comment 4 2025-12-04 13:00:26 PST
Created attachment 477616 [details] [fast-cq]Patch
EWS
Comment 5 2025-12-04 16:59:09 PST
Committed 303944@main (f562bc37acd9): <https://commits.webkit.org/303944@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477616 [details].
Radar WebKit Bug Importer
Comment 6 2025-12-04 17:00:16 PST
Note You need to log in before you can comment on or make changes to this bug.