[blocks-in-inline] lastLineWithInflowContent should only ignore lines with non-contentful boxes when they stretch the container https://bugs.webkit.org/show_bug.cgi?id=303515

Reviewed by Antti Koivisto.

This is in preparation for being able to return visually empty block enclosing lines
as last lines (relevant in the context of margin collapsing).

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::lastLineWithInflowContent):

Canonical link: https://commits.webkit.org/303944@main